--- a/number-baseball/style.css
+++ b/number-baseball/style.css
@@ -8,34 +8,63 @@ html {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background: url(./images/baseball-field.svg) no-repeat 50% 90% / cover;
   text-align: center;
 }
 
-/* board */
+.blind {
+  display: block;
+  position: absolute;
+  margin: -1px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
 
+/* board */
 #board {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 #board .title {
-  padding: 10px 30px;
-  /* width: 200px; */
-  background-color: #5272a5;
-  border-radius: 10px;
-  font-size: 1.5rem;
+  width: 200px;
+  height: 100px;
+  background: url(./images/title.svg) no-repeat 50% / contain;
+  font-size: 3rem;
   color: #fff;
+  z-index: 9;
 }
 
-.answer {
-  width: 500px;
+#board .answer {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10px;
+  width: 900px;
+  height: 200px;
+  background: url(./images/board.svg) no-repeat 50% / contain;
+  /* border: 1px solid #000; */
   font-size: 5rem;
+  font-weight: 700;
+  color: #ffff2a;
 }
 
 /* container */
 #container {
-  margin-top: 100px;
+  margin-top: 170px;
 }
 
 #container .ball_area {
@@ -48,10 +77,57 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 10px;
+  margin: 0 10px 100px;
   width: 140px;
   height: 140px;
-  background: url(./images/ball.png) no-repeat center / cover;
+  background: url(./images/ball.png) no-repeat 50% / cover;
   font-size: 8rem;
   font-weight: 700;
+}
+
+/* form */
+#form {
+  /* display: ; */
+}
+
+#form #input {
+  text-align: center;
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-radius: 6px;
+  margin-right: 4px;
+}
+
+#form button {
+  padding: 10px 20px;
+  height: 40px;
+  background-color: #000;
+  color: #fff;
+  vertical-align: -1px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+#form button:hover {
+  background-color: #333;
+}
+
+/* logs */
+#logs {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 200px;
+  height: 27rem;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#logs li {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 1.6rem;
+  line-height: 3rem;
+  color: #fff;
 }
